--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,18 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Ionic Notes
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+    <ion-list>
+        <ion-item *ngFor="let note of notes" (click)="goToDetail(note.id)">
+            <ion-icon slot="start" name="arrow-forward"></ion-icon>
+            <ion-label>
+                <h3>{{ note.title }}</h3>
+            </ion-label>
+        </ion-item>
+    </ion-list>
 </ion-content>
