--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,10 +9,15 @@
 <ion-content>
     <ion-list>
         <ion-item *ngFor="let note of notes" (click)="goToDetail(note.id)">
-            <ion-icon slot="start" name="arrow-forward"></ion-icon>
+            <ion-icon slot="end" name="arrow-forward"></ion-icon>
             <ion-label>
                 <h3>{{ note.title }}</h3>
             </ion-label>
         </ion-item>
     </ion-list>
+
+    <div ion-padding>
+        <ion-button expand="block" fill="outline" (click)="createNote()">Create</ion-button>
+    </div>
+
 </ion-content>
